Finished html skeleton and added basic container styles to css

--- a/index.html
+++ b/index.html
@@ -13,13 +13,17 @@
     <body>
         <!-- Outside box -->
         <div id="content-box">Outside box
-            <!-- Left side is to display Digimon Info -->
+            <!-- Left container to display Digimon Info -->
             <div id="left-digimon-info">
-                <img src>
+                <img id="digimon-img">
                 <div id="digimon-types">
-                    <span class=""></span>
+                    <span class="type-box">Type</span><span class="type-box">Attribute</span>
                 </div>
+                <div id="digimon-description">info</div>
             </div>
+
+            <!-- Right container to display Digimon List -->
+            <div id="digimon-list">List</div>
         </div>
 
     </body>
