Change Page sizing layout with css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <body>
         <!-- Outside box -->
-        <div id="content-box">Outside box
+        <div id="content-box">
             <!-- Left container to display Digimon Info -->
             <div id="left-digimon-info">
                 <img id="digimon-img">
