Styled digimonNameList with css and add Event Listener

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
 
             <!-- Right container to display Digimon List -->
-            <div id="digimon-list">List</div>
+            <div id="digimon-list"></div>
         </div>
 
     </body>
