Add function renderDigimonTypes and append to DOM

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div id="left-digimon-info">
                 <div id="image-container"></div>
                 <div id="digimon-types">
-                    <span class="type-box">Type</span><span class="type-box">Attribute</span>
+                    <span class="type-box-type"></span><span class="type-box-attribbute"></span>
                 </div>
                 <div id="digimon-description">info</div>
             </div>
