Added digimon attributes and styling to type-box

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div id="left-digimon-info">
                 <div id="image-container"></div>
                 <div id="digimon-types">
-                    <span class="type-box-type"></span><span class="type-box-attribbute"></span>
+                    <span id="type-box-type" class="type-box"></span><span id="type-box-attribute" class="type-box"></span>
                 </div>
                 <div id="digimon-description">info</div>
             </div>
