Add function to render description on left and added styling

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div id="digimon-types">
                     <span id="type-box-type" class="type-box"></span><span id="type-box-attribute" class="type-box"></span>
                 </div>
-                <div id="digimon-description">info</div>
+                <div id="digimon-description"></div>
             </div>
 
             <!-- Right container to display Digimon List -->
