--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
         <link rel="stylesheet" href="index.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         
+        <!-- Google fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
+        
         <!-- Javascript from index.js and Bootstrap, jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="index.js" defer></script>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -20,6 +25,7 @@
     </head>
 
     <body>
+        <h1>DIGIMON DEX</h1>
         <!-- Nav Bar with Search box Bootstrap -->
         <nav class="navbar navbar-light bg-light">
             <form class="form-inline">
