--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
             <!-- Left container to display Digimon Info -->
             <div id="left-digimon-info">
                 <div id="image-container"></div>
-                <span id="yearReleased"></span>
+                <div>
+                    <span id="yearReleased"></span>
+                </div>
                 <div id="digimon-types">
                     <span id="type-box-type" class="type-box"></span><span id="type-box-attribute" class="type-box"></span>
                 </div>
