--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <nav class="navbar navbar-light bg-light">
             <form class="form-inline">
               <input id="input" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+              <button id="searchBtn" class="btn btn-outline-success my-2 my-sm-0" type="button">Search</button>
+              <button id="refreshBtn" class="btn btn-outline-success my-2 my-sm-0" type="button">Refresh</button>
             </form>
         </nav>
         <!-- Outside box -->
