Sort dropbox added with function

--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
               <input id="input" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
               <button id="searchBtn" class="btn btn-outline-success my-2 my-sm-0" type="button">Search</button>
               <button id="refreshBtn" class="btn btn-outline-success my-2 my-sm-0" type="button">Refresh</button>
+              <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Sort
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <option id="sortAscendingBtn" class="dropdown-item">Sort Ascending (A-Z)</option>
+                  <option class="dropdown-item">Sort Descending (Z-A)</option>
+                  <!-- <option class="dropdown-item">Something else here</option> -->
+                </div>
+              </div>
             </form>
         </nav>
         <!-- Outside box -->
