fix merge branches

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </head>
 
     <body>
-        <h1>DIGIMON DEX</h1>
+        <h1 class="display-3">Digimon Dex</h1>
         <!-- Nav Bar with Search box Bootstrap -->
         <nav class="navbar navbar-light bg-light">
             <form class="form-inline">
