fix header container logo and change digimonNameList css

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     </head>
 
     <body>
-        <h1 class="display-3">Digimon Dex</h1>
+        <div id="header-container">
+            <img src="images/Digimon-2.png">
+        </div>
         <!-- Nav Bar with Search box Bootstrap -->
         <nav class="navbar navbar-light bg-light">
             <form class="form-inline">
