--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <body>
         <div id="header-container">
-            <img src="images/Digimon-2.png">
+            <img src="images/Final-final-logo.png">
         </div>
         <!-- Nav Bar with Search box Bootstrap -->
         <nav class="navbar navbar-light bg-light">
