fix header styling and content box

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <body>
         <div id="header-container">
-            <img src="images/Final-final-logo.png">
+            <img src="images/final-digimon-logo.png">
         </div>
         <!-- Nav Bar with Search box Bootstrap -->
         <nav class="navbar navbar-light bg-light">
@@ -35,7 +35,7 @@
               <button id="searchBtn" class="btn btn-outline-success my-2 my-sm-0" type="button">Search</button>
               <button id="refreshBtn" class="btn btn-outline-success my-2 my-sm-0" type="button">Refresh</button>
               <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button id="sortBtn" class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Sort
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
