--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
             <img src="images/final-digimon-logo.png">
         </div>
         <!-- Nav Bar with Search box Bootstrap -->
-        <nav class="navbar navbar-light bg-light">
+        <nav class="navbar navbar-light">
             <form class="form-inline">
               <input id="input" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-              <button id="searchBtn" class="btn btn-outline-success my-2 my-sm-0" type="button">Search</button>
-              <button id="refreshBtn" class="btn btn-outline-success my-2 my-sm-0" type="button">Refresh</button>
+              <button id="searchBtn" class="btn btn-light my-2 my-sm-0" type="button">Search</button>
+              <button id="refreshBtn" class="btn btn btn-light my-2 my-sm-0" type="button">Refresh</button>
               <div class="dropdown">
                 <button id="sortBtn" class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Sort
