--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!-- Nav Bar with Search box Bootstrap -->
         <nav class="navbar navbar-light">
             <form class="form-inline">
-              <input id="input" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+              <input id="input" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" autocomplete="off">
               <button id="searchBtn" class="btn btn-light my-2 my-sm-0" type="button">Search</button>
               <button id="refreshBtn" class="btn btn btn-light my-2 my-sm-0" type="button">Refresh</button>
               <div class="dropdown">
@@ -40,7 +40,7 @@
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                   <option id="sortAscendingBtn" class="dropdown-item">Sort Ascending (A-Z)</option>
-                  <option class="dropdown-item">Sort Descending (Z-A)</option>
+                  <option id="sortDescendingBtn" class="dropdown-item">Sort Descending (Z-A)</option>
                   <!-- <option class="dropdown-item">Something else here</option> -->
                 </div>
               </div>
@@ -49,7 +49,7 @@
         <!-- Outside box -->
         <div id="content-box">
             <!-- Left container to display Digimon Info -->
-            <div id="left-digimon-info">
+            <div id="left-digimon-info" class="none">
                 <div id="image-container"></div>
                 <div>
                     <span id="yearReleased"></span>
