add digimon name fx

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
             <div id="left-digimon-info" class="none">
                 <div id="image-container"></div>
                 <div>
+                    <span id="digimonName"></span>
+                </div>
+                <div>
                     <span id="yearReleased"></span>
                 </div>
                 <div id="digimon-types">
